2003-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:
	* win/tcl.m4: removed incorrect checks for existence of
	optimization.  TCL_CFG_OPTIMIZED is now defined whenever the user
	does not build with --enable-symbols.

2003-10-06  Don Porter	<dgp@users.sourceforge.net>

	* unix/configure.in:	 Reconfigured to use $TCL_PREFIX as the
	default value of --prefix, and also added warning when a TK_PREFIX
	value different from TCL_PREFIX is selected, since [package require Tk]
	fails in that configuration. [Bugs 428627,765642]

	* unix/tcl.m4 (SC_PATH_TCLCONFIG):	Corrected search path so
	that alpha and beta releases of Tcl are not favored. [Bug 608698]

	* unix/configure.in:	Added check that version of Tcl header found
	by configure matches that of the Tk we wish to build.  As long as
	the Tk sources insist on lockstep releases, Tk's configuration should
	verify that's what we have.  [Bug 749088]

	* unix/configure:	autoconf (2.57)

2003-10-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/scale.tcl: Clear bug with chording mouse buttons.

	* library/console.tcl: Avoid including the console in the list
	of interpreters exposed by [winfo interps].

2003-10-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj:
	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
	Added support for all applicable customizable makefile variables
	from tcl/macosx/Makefile.

	* macosx/README:
	* macosx/Wish.pbproj/project.pbxproj: ensure that the versioned
	wishX.X script works correctly when Tk.framework with multiple
	versions is present by referring to a copy of 'Wish Shell.app'
	located in Tk.framework/Versions/X.X/Resources.

2003-09-30  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXButton.c (TkpDisplayButton): Use the tk text
	drawing for checkbuttons & radiobuttons as well as for labels.
	* macosx/tkMacOSXEvent.c (XSync): New function, need to implement
	this so drawing will get flushed in "update idletasks".